Fix navbar overlap on IE11

--- a/source/assets/stylesheets/components/_navigation.scss
+++ b/source/assets/stylesheets/components/_navigation.scss
@@ -8,6 +8,7 @@
   .site-logo{
     float: left;
     width: 125px;
+    height: 40px;
     .isvg{
       display: block;
       margin: 0 0 auto;
